- DSBPremiumType (Changed)
    - added property "premiumMinimumAmount"
- InsuranceOptionsBenefitPeriodType (Removed)
- InsuranceOptionsBenefitScopeType (Removed)
- InsuranceOptionsEmployeesType (Removed)
- InsuranceOptionsVariousType (Changed)
    - properties "premiumRateGuaranty", "renunciationTerminationRightClaim", "annualCancellation", "surplusParticipation" are now optional
- MedicalExpensesHospitalType (Added)
- OfferAcceptanceType (Changed)
    - renamed property "digitalSignedOffer" of "offerDocument" to "signedOffer"
    - renamed property "digitalSignedDocument" of "offerDocument" to "signedDocument"
    - removed property "physicalSignedDocument" of "offerDocument"
    - renamed property "offerAttachementDocument" to "otherAttachementDocument"
    - changed type of "otherAttachementDocument" to MultiFileType
- OfferCustomerType (Changed)
    - NOGACodeMain is now optional
    - Added property "SUVACompany"
- OfferConclusionDecisionDataType (Changed)
    - removed property "customer"
    - added property "contractNo"
    - replaced enum values of property "offerConclusionDecision"
    - removed property "offerConclusionDenialReason"
    - added property "attachmentDocument"
- OfferDSBType (Changed)
    - renamed property "fixedPayrolls" to "personMentionedByName"
    - Added mandatory property "riskCharacteristic" (moved from CompanyCustomerType)
    - all properties of "insuranceOptions" are mandatory
    - added property "premiumOverviewDSB"
    - property "maxSalary" in "personGroups" is mandatory
- OfferNlpiConclusionDecisionDataType (Changed)
    - Added mandatory constants processName, subProcessName and processVersion
- OfferNlpiDataType (Changed)
    - Added mandatory constants processName, subProcessName and processVersion
    - Added mandatory property "insurerContact"
    - Added property "combinationMeta"
    - removed property "premiumOverview"
    - added property "netPremiumNLPITotal"